installfat = executable(
	'installfat',
	sources: [
		'installfat.cpp',
	],
	install: false,
	native: true,
	implicit_include_directories: true,
	include_directories: incs,
)

fatedit = executable(
	'fatedit',
	sources: [
		'fatedit.cpp',
	],
	install: false,
	native: true,
	implicit_include_directories: true,
	include_directories: incs,
)
